Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">nodejswebsecurity.github.io</h1>
-      <h2 class="project-tagline">Short doc about Securing Node.JS App based on Karl Duuna&#39;s &quot;Secure your Node.JS Web Application&quot; book.</h2>
+      <h2 class="project-tagline">Short doc about Securing Node.JS App mostly based on Karl Duuna&#39;s &quot;Secure your Node.JS Web Application&quot; book.</h2>
       <a href="https://github.com/NikitaLiashenko/NodeJSWebSecurity.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/NikitaLiashenko/NodeJSWebSecurity.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/NikitaLiashenko/NodeJSWebSecurity.github.io/tarball/master" class="btn">Download .tar.gz</a>
